[project]
dynamic = ["dependencies", "version"]
name = "incline"
# version = "0.0.9"
authors = [
{ name="Chris Maxwell", email="chris@wrathofchris.com" },
]
description = "Incline (RAMP) Read Atomic MultiPartition Transactions"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["yapf>=0.32,<1", "pytest>=7.2.1,<8"]

[project-urls]
homepage = "https://github.com/WrathOfChris/incline"
repository = "https://github.com/WrathOfChris/incline.git"
issues = "https://github.com/WrathOfChris/incline/issues"

[build-system]
requires = ["setuptools>=61.0", "build", "wheel", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools-git-versioning]
enabled = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "tests/*.py"]

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
split_before_logical_operator = true

[tool.yapfignore]
ignore_patterns = []
